# AoC

./: .gitignore  Cargo.toml
aoc2015/: Cargo.toml
aoc2015/src/: day01.rs  lib.rs
aoc2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  lib.rs
aoc2023/: Cargo.toml
aoc2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  dayX.rs  lib.rs
aoc2024/: Cargo.toml
aoc2024/src/: day01.rs  dayX.rs  lib.rs
