[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
authors = ["peter@howell.fun"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indoc = "2.0.4"
itertools = "0.12.0"
intersection = "1.0.0"
